--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         Tosh Games | Game Developer
       </h1>
       <p class="lead">
-        Young and aspiring game designer! Check out my journey below!
+        Indie game developer with a side hobby of software development! Check out my journey below!
       </p>
       <a href="#what" class="btn">
         Read More
