--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <!-- Footer (Section: Contact) -->
   <footer id="main-footer" class="bg-dark text-center p-1">
     <h2>Contact</h2>
-    <p>You can contact me at <a id="footer-link" href="mailto:anton@chuchuva.com">anton@chuchuva.com</a>. I'd love to
+    <p>You can contact me at <a id="footer-link" href="https://www.linkedin.com/in/anton-chuchuva-6738a3251/">LinkedInx</a>. I'd love to
       hear from you!</p>
   </footer>
 
