--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <div id="fader"></div>
     <div class="showcase-content">
       <h1 class="l-heading">
-        Tosh Games | Game Developer
+        Junior Software and Game Developer
       </h1>
       <p class="lead">
-        Indie game developer with a side hobby of software development! Check out my journey below!
+        Software developer with a side hobby of indie game development! Check out my journey below!
       </p>
       <a href="#what" class="btn">
         Read More
@@ -136,7 +136,7 @@
   <!-- Footer (Section: Contact) -->
   <footer id="main-footer" class="bg-dark text-center p-1">
     <h2>Contact</h2>
-    <p>You can contact me at <a id="footer-link" href="https://www.linkedin.com/in/anton-chuchuva-6738a3251/">LinkedInx</a>. I'd love to
+    <p>You can contact me at <a id="footer-link" href="https://www.linkedin.com/in/anton-chuchuva-6738a3251/">LinkedIn</a>. I'd love to
       hear from you!</p>
   </footer>
 
