--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           <li><strong>Based in</strong> — Melbourne, Australia</li>
           <li><strong>Languages</strong> — English, Russian</li>
           <li><strong>Programming</strong> — C#, JavaScript, PHP, SQL, Python</li>
-          <li><strong>Software</strong> — Unity, Photoshop, Premiere</li>
-          <li><strong>Hobbies</strong> — Playing Video Games and Board Games, Drawing, Tennis, Hiking, Travelling</li>
+          <li><strong>Software</strong> — Unity, Blender, Photoshop, Premiere</li>
+          <li><strong>Hobbies</strong> — Playing Video Games and Board Games, Reading Comics, Drawing, Tennis, Hiking, Travelling</li>
           <br>
           <li><strong>2024 - present</strong> — Software developer at <strong><a href="https://traffio.com.au" target="_blank" rel="noreferrer">Traffio</a></strong>.</li>
           <li><strong>2023 - 2026</strong> — Swinburne University of Technology, Bachelor of Games and Interactivity/Bachelor of Computer Science.</li>
